Navbar collapse fixed. Some style changes
Navbar collapses to hamburger on small screen sizes. Boxcontainer min-height changed so doesn't cut off text when minimized. Default weather set to rain and 7 degrees to more accurately represent standard London weather.

--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,8 @@ h6 {
 }
 .boxcontainer {
 	max-width: 550px;
-	height: 100vh;
+	max-height: 100vh;
+  min-height: 500px;
 	border: 1px solid #374955;
 	margin: 0 auto;
 	text-align: center;
